<?xml version="1.0"?>
<?xml-model
   href="http://download.ros.org/schema/package_format3.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>chassis_serial_driver</name>
  <version>0.1.0</version>
  <description>Omnidirectional chassis control via serial port.</description>
  <maintainer email="junshuo.zheng@qq.com">ZHENG Junshuo</maintainer>
  <license>MIT</license>
  <author email="junshuo.zheng@qq.com">ZHENG Junshuo</author>

  <!-- buildtool_depend: dependencies of the build process -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- depend: build, export, and execution dependency -->
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>serial_driver</depend>
  <depend>tf2_ros</depend>
  <depend>std_srvs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
